# rustdict

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: colored_display.rs  main.rs  stardict.rs  urban_dictionary.rs
src/api/: data.rs  errors.rs  mod.rs
src/dictionary/: data.rs  mod.rs
src/stardict/: dict.rs  errors.rs  idx.rs  ifo.rs  syn.rs
src/urban_dictionary/: display.rs  mod.rs
